--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
 	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
 
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
 	//쿼리문 ?에 무슨 값이 들어가는지 보여주는
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
 
@@ -45,7 +47,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'mysql:mysql-connector-java'
 
-//	이메일 전송
+    //이메일 전송
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.6.4'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -58,12 +60,7 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
-//세팅해놓은 플러그인과 맞물리면서 빌드될때 configurations에 querydsl이
-//compileClasspath에 집어넣고 컴파일될 때 같이annotationProcessor가 같이 돌면서 q파일 생성
-//querydslDir이 두개가 세팅되어있는데 인텔리제이같은 ide가 자동으로 자기 소스폴더에 임포트해줌
 
-//querydsl 추가 시작
-//$buildDir/generated/querydsl는 소스폴더 잡아준
 def querydslDir = "$buildDir/generated/querydsl"
 
 querydsl {
@@ -82,4 +79,3 @@ configurations {
 	}
 	querydsl.extendsFrom compileClasspath
 }
-//querydsl 추가 끝
