--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
     datasource:
-        url: jdbc:mysql://localhost:3306/medicalshop?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-        username: root
-        password: root
+        url: jdbc:mysql://medicalprodutshop.cmudx56yvhoo.ap-northeast-2.rds.amazonaws.com:3306/medicalshop
+        username: heojin
+        password: h8778569
         driver-class-name: com.mysql.cj.jdbc.Driver
 
     jpa:
