--- a/build.gradle
+++ b/build.gradle
@@ -79,3 +79,7 @@ configurations {
 	}
 	querydsl.extendsFrom compileClasspath
 }
+compileQuerydsl.doFirst {
+	if(file(querydslDir).exists() )
+		delete(file(querydslDir))
+}
