--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
-def querydslDir = "src/main/generated"
+def querydslDir = "src/generated"
 
 querydsl {
 	jpa = true
