--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,7 @@ cloud.aws.stack.auto=false
 cloud.aws.credentials.access-key=AKIAUFF5NL4SVTALZCWU
 cloud.aws.credentials.secret-key=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
 
-spring.datasource.url: jdbc:mysql://medicalprodutshop.cmudx56yvhoo.ap-northeast-2.rds.amazonaws.com:3306/medicalshop
-spring.datasource.username=heojin
-spring.datasource.password=h8778569
+#\uD14C\uC2A4\uD2B8\uC5D0\uB9CC \uC801\uC6A9\uB418\uB294 \uC124\uC815
+spring.jpa.show_sql=true
+#MySQL \uCFFC\uB9AC\uB85C \uD574\uB3C4 h2 \uC778\uC9C0 \uAC00\uB2A5
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
