--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ plugins {
 
 group = 'capstonedesign'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
+sourceCompatibility = "11"
 
 configurations {
 	compileOnly {
@@ -31,6 +31,8 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
+	implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+
 	//querydsl 추가
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
 	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
@@ -45,7 +47,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'mysql:mysql-connector-java'
+	runtimeOnly 'com.h2database:h2'
 
     //이메일 전송
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.6.4'
