--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 //	runtimeOnly 'mysql:mysql-connector-java'
 
     //이메일 전송
