--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,4 @@ cloud.aws.stack.auto=false
 spring.jpa.show_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
-spring.jpa.hibernate.use-new-id-generator-mapping=false
+spring.thymeleaf.prefix=classpath:/templates/
