application.properties update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,16 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=Mr.Heo55@gmail.com
 
-cloud.aws.s3.bucket=reviewimagefile
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=
+spring.mail.properties.mail.smtp.starttls.enable=
+
+cloud.aws.s3.bucket=
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.stack.auto=false
+
+cloud.aws.credentials.access-key=
+cloud.aws.credentials.secret-key=
 
 spring.jpa.show_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
