--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ dependencies {
 
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
-	//쿼리문 ?에 무슨 값이 들어가는지 보여주는
+	//p6spy, 쿼리문 ?에 무슨 값이 들어가는지 보여주는
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -49,7 +49,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
-//	runtimeOnly 'mysql:mysql-connector-java'
+	runtimeOnly 'mysql:mysql-connector-java'
 
     //이메일 전송
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.6.4'
